CRMS added menu seletion style - Manli

--- a/MerlionPortal/MerlionPortal-war/web/crms/createkeyaccount.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/createkeyaccount.xhtml
@@ -64,7 +64,7 @@
                     <c:if test="#{dashboardBean.checkCRMSCanManageKeyAccount() ||dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label="Key Account Management" styleClass="display:block">
                             <p:menuitem value="View Order Statistics" url="vieworderstatistics.xhtml" />
-                            <p:menuitem value="Create Key Account" url="createkeyaccount.xhtml" />
+                            <p:menuitem value="Create Key Account" url="createkeyaccount.xhtml" style="background:#aa5050; color:white" />
                             <p:menuitem value="View All Key Accounts" url="viewallkeyaccounts.xhtml" />
                         </p:submenu>
                     </c:if>
