--- a/MerlionPortal/MerlionPortal-war/web/crms/createservicepo.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/createservicepo.xhtml
@@ -51,7 +51,7 @@
                     <c:if test="#{dashboardBean.checkCRMSCanGenerateServiceSO() || dashboardBean.checkCRMSCanUpdateCustomerCredit()|| dashboardBean.checkCRMSCanGenerateServicePO() ||dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label="Order Management" styleClass="display:block">
                             <c:if test="#{dashboardBean.checkCRMSCanGenerateServiceSO() || dashboardBean.checkCRMSCanGenerateServicePO() ||dashboardBean.loginedUser.userType == 'superuser'}">
-                                <p:menuitem value="Create Service PO" url="createservicepo.xhtml" />
+                                <p:menuitem value="Create Service PO" url="createservicepo.xhtml" style="background:#aa5050; color:white" />
                                 <p:menuitem value="View All Orders" url="viewallservicepos.xhtml" />
                             </c:if>
                             <c:if test="#{dashboardBean.checkCRMSCanUpdateCustomerCredit()||dashboardBean.checkCRMSCanGenerateServiceSO() || dashboardBean.checkCRMSCanGenerateServicePO() ||dashboardBean.loginedUser.userType == 'superuser'}">
