--- a/MerlionPortal/MerlionPortal-war/web/crms/createservice.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/createservice.xhtml
@@ -31,7 +31,7 @@
                     </p:submenu>
                     <c:if test="#{dashboardBean.checkCRMSCanManageServiceCatalog()||dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label="Service Catalog Management" styleClass="display:block">
-                            <p:menuitem value="Create New Service" url="createservice.xhtml" />
+                            <p:menuitem value="Create New Service" url="createservice.xhtml" style="background:#aa5050; color:white" />
                             <p:menuitem value="View All Services" url="viewcompanyservices.xhtml" />
                         </p:submenu>
                     </c:if>
