--- a/MerlionPortal/MerlionPortal-war/web/crms/viewcompanyservices.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/viewcompanyservices.xhtml
@@ -33,7 +33,7 @@
                     <c:if test="#{dashboardBean.checkCRMSCanManageServiceCatalog()||dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label="Service Catalog Management" styleClass="display:block">
                             <p:menuitem value="Create New Service" url="createservice.xhtml" />
-                            <p:menuitem value="View All Services" url="viewcompanyservices.xhtml" />
+                            <p:menuitem value="View All Services" url="viewcompanyservices.xhtml"　style="background:#aa5050; color:white" />
                         </p:submenu>
                     </c:if>
                     <c:if test="#{dashboardBean.checkCRMSCanGenerateQuotationRequst()|| dashboardBean.checkCRMSCanGenerateServiceQuotationAndContract() ||dashboardBean.loginedUser.userType == 'superuser'}">
