--- a/MerlionPortal/MerlionPortal-war/web/mrp/materialreq.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/materialreq.xhtml
@@ -25,7 +25,7 @@
 
             <p:menu styleClass="menu-width">
                 <p:submenu label="MRP HOME" styleClass="display:block">
-                    <p:menuitem value="MRP II Home" url="mrp.xhtml" style="background-color: lavender"/>
+                    <p:menuitem value="MRP II Home" url="mrp.xhtml" />
                 </p:submenu>
                 <c:if test="#{dashboardBean.checkMRPCanManageProductComponent() || dashboardBean.loginedUser.userType == 'superuser'}">
                     <p:submenu label="Product Catalog Management">
@@ -39,15 +39,15 @@
                 </c:if>
                 <c:if test="#{dashboardBean.checkMRPCanManageUseForecast() || dashboardBean.loginedUser.userType == 'superuser'}">
                     <p:submenu label="MRP">
-                                <p:menuitem value="MRP Process" url="forecast.xhtml" />
-                            </p:submenu>
+                        <p:menuitem value="MRP Process" url="forecast.xhtml" style="background:#aa5050; color:white" />
+                    </p:submenu>
                 </c:if>
 
             </p:menu>
         </ui:define>
 
         <ui:define name="right">
-                <p:breadCrumb>
+            <p:breadCrumb>
                 <p:menuitem value="MRP Home" url="mrp.xhtml" />
                 <p:menuitem value="MRP Process" url="forecast.xhtml" />
             </p:breadCrumb>
@@ -204,8 +204,8 @@
                             </p:panelGrid>
                         </p:panel>
                     </p:dataGrid>
-                   <p:commandButton value="Proceed to Generate PO"  action="#{materialReqManagedBean.proceedToPO}" />
-                   <p:commandButton value="Do not Generate PO, Go Back to Main MRP Page"  action="#{materialReqManagedBean.doNotToPO}" />
+                    <p:commandButton value="Proceed to Generate PO"  action="#{materialReqManagedBean.proceedToPO}" />
+                    <p:commandButton value="Do not Generate PO, Go Back to Main MRP Page"  action="#{materialReqManagedBean.doNotToPO}" />
                 </p:panel>
 
 
