--- a/MerlionPortal/MerlionPortal-war/web/mrp/backorder.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/backorder.xhtml
@@ -25,7 +25,7 @@
 
             <p:menu>
                 <p:submenu label="MRP HOME" styleClass="display:block">
-                    <p:menuitem value="MRP II Home" url="mrp.xhtml" style="background-color: lavender"/>
+                    <p:menuitem value="MRP II Home" url="mrp.xhtml" />
                 </p:submenu>
                 <c:if test="#{dashboardBean.checkMRPCanManageProductComponent() || dashboardBean.loginedUser.userType == 'superuser'}">
                     <p:submenu label="Product Catalog Management">
@@ -39,8 +39,8 @@
                 </c:if>
                 <c:if test="#{dashboardBean.checkMRPCanManageUseForecast() || dashboardBean.loginedUser.userType == 'superuser'}">
                     <p:submenu label="MRP">
-                                <p:menuitem value="MRP Process" url="forecast.xhtml" />
-                            </p:submenu>
+                        <p:menuitem value="MRP Process" url="forecast.xhtml" style="background:#aa5050; color:white" />
+                    </p:submenu>
                 </c:if>
 
             </p:menu>
