--- a/MerlionPortal/MerlionPortal-war/web/mrp/mrp.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/mrp.xhtml
@@ -25,22 +25,22 @@
             <h:form id="formMain">
                 <p:menu styleClass="menu-width">
                     <p:submenu label="MRP HOME" styleClass="display:block">
-                        <p:menuitem value="MRP II Home" url="mrp.xhtml" style="background-color: lavender"/>
+                        <p:menuitem value="MRP II Home" url="mrp.xhtml" style="background:#aa5050; color:white" />
                     </p:submenu>
                     <c:if test="#{dashboardBean.checkMRPCanManageProductComponent() || dashboardBean.loginedUser.userType == 'superuser'}">
-                           <p:submenu label="Product Catalog Management">
-                                <p:menuitem value="Add New Product" url="addnewproduct.xhtml" />
-                                <p:menuitem value="View, Edit and Delete" url="viewallproducts.xhtml" />
-                            </p:submenu>
-                            <p:submenu label="BOM Management">
-                                <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
-                                <p:menuitem value="View, Edit and Delete BOM" url="viewbom.xhtml" />
-                            </p:submenu>
+                        <p:submenu label="Product Catalog Management">
+                            <p:menuitem value="Add New Product" url="addnewproduct.xhtml" />
+                            <p:menuitem value="View, Edit and Delete" url="viewallproducts.xhtml" />
+                        </p:submenu>
+                        <p:submenu label="BOM Management">
+                            <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
+                            <p:menuitem value="View, Edit and Delete BOM" url="viewbom.xhtml" />
+                        </p:submenu>
                     </c:if>
                     <c:if test="#{dashboardBean.checkMRPCanManageUseForecast() || dashboardBean.loginedUser.userType == 'superuser'}">
-                            <p:submenu label="MRP">
-                                <p:menuitem value="MRP Process" url="forecast.xhtml" />
-                            </p:submenu>
+                        <p:submenu label="MRP">
+                            <p:menuitem value="MRP Process" url="forecast.xhtml" />
+                        </p:submenu>
                     </c:if>
 
                 </p:menu>
@@ -48,7 +48,7 @@
         </ui:define>
 
         <ui:define name="right">
-                <p:breadCrumb>
+            <p:breadCrumb>
                 <p:menuitem value="MRP Home" url="mrp.xhtml" />
             </p:breadCrumb>
             <div class="system-banner mrp-system-banner"></div>
