--- a/MerlionPortal/MerlionPortal-war/web/mrp/viewallproducts.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/viewallproducts.xhtml
@@ -12,31 +12,31 @@
         <c:set var="import" value="templateadmin.xhtml"/>
     </c:if>
 
-            <style>
-.ui-datatable-hor-scroll .ui-datatable-tablewrapper,.scrolling-div .ui-datatable-tablewrapper{
-     overflow: auto;
-     width: 100%;
-     padding-bottom: 5px;}
-</style>
-    
-    <ui:composition template="${root}/templates/${import}">        
-        <ui:param name="pageName" value="MRP II View All Product" />
+    <style>
+        .ui-datatable-hor-scroll .ui-datatable-tablewrapper,.scrolling-div .ui-datatable-tablewrapper{
+            overflow: auto;
+            width: 100%;
+            padding-bottom: 5px;}
+        </style>
 
-        <ui:define name="more-imports">
-            <ui:insert>
-                <link rel="stylesheet" href="${request.contextPath}/css/mrp.css" type="text/css" />
-            </ui:insert>
-        </ui:define>
+        <ui:composition template="${root}/templates/${import}">        
+            <ui:param name="pageName" value="MRP II View All Product" />
 
-        <ui:define name="left">
-            <p:menu styleClass="menu-width">
-                <p:submenu label="MRP HOME" styleClass="display:block">
-                    <p:menuitem value="MRP II Home" url="mrp.xhtml" style="background-color: lavender"/>
+            <ui:define name="more-imports">
+                <ui:insert>
+                    <link rel="stylesheet" href="${request.contextPath}/css/mrp.css" type="text/css" />
+                </ui:insert>
+            </ui:define>
+
+            <ui:define name="left">
+                <p:menu styleClass="menu-width">
+                    <p:submenu label="MRP HOME" styleClass="display:block">
+                        <p:menuitem value="MRP II Home" url="mrp.xhtml" />
                 </p:submenu>
                 <c:if test="#{dashboardBean.checkMRPCanManageProductComponent() || dashboardBean.loginedUser.userType == 'superuser'}">
                     <p:submenu label="Product Catalog Management">
                         <p:menuitem value="Add New Product" url="addnewproduct.xhtml" />
-                        <p:menuitem value="View, Edit and Delete" url="viewallproducts.xhtml" />
+                        <p:menuitem value="View, Edit and Delete" url="viewallproducts.xhtml" style="background:#aa5050; color:white" />
                     </p:submenu>
                     <p:submenu label="BOM Management">
                         <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
@@ -45,8 +45,8 @@
                 </c:if>
                 <c:if test="#{dashboardBean.checkMRPCanManageUseForecast() || dashboardBean.loginedUser.userType == 'superuser'}">
                     <p:submenu label="MRP">
-                                <p:menuitem value="MRP Process" url="forecast.xhtml" />
-                            </p:submenu>
+                        <p:menuitem value="MRP Process" url="forecast.xhtml" />
+                    </p:submenu>
                 </c:if>
 
             </p:menu>
