--- a/MerlionPortal/MerlionPortal-war/web/mrp/viewbom.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/viewbom.xhtml
@@ -25,7 +25,7 @@
 
             <p:menu styleClass="menu-width">
                 <p:submenu label="MRP HOME" styleClass="display:block">
-                    <p:menuitem value="MRP II Home" url="mrp.xhtml" style="background-color: lavender"/>
+                    <p:menuitem value="MRP II Home" url="mrp.xhtml" />
                 </p:submenu>
                 <c:if test="#{dashboardBean.checkMRPCanManageProductComponent() || dashboardBean.loginedUser.userType == 'superuser'}">
                     <p:submenu label="Product Catalog Management">
@@ -34,13 +34,13 @@
                     </p:submenu>
                     <p:submenu label="BOM Management">
                         <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
-                        <p:menuitem value="View, Edit and Delete BOM" url="viewbom.xhtml" />
+                        <p:menuitem value="View, Edit and Delete BOM" url="viewbom.xhtml" style="background:#aa5050; color:white" />
                     </p:submenu>
                 </c:if>
                 <c:if test="#{dashboardBean.checkMRPCanManageUseForecast() || dashboardBean.loginedUser.userType == 'superuser'}">
                     <p:submenu label="MRP">
-                                <p:menuitem value="MRP Process" url="forecast.xhtml" />
-                            </p:submenu>
+                        <p:menuitem value="MRP Process" url="forecast.xhtml" />
+                    </p:submenu>
                 </c:if>
 
             </p:menu>
